# openedx-tutor-plugins

./: README.rst  catalog-info.yaml
.github/workflows/: ltistore-tests.yml  run-paragon-plugin-tests.yml
plugins/: README.rst
plugins/tutor-contrib-blockstore-filesystem/: MANIFEST.in  Makefile  README.rst  setup.py
plugins/tutor-contrib-blockstore-filesystem/blockstore_config_filesystem/: plugin.py
plugins/tutor-contrib-blockstore-filesystem/blockstore_config_filesystem/patches/: openedx-cms-common-settings
plugins/tutor-contrib-blockstore-filesystem/blockstore_config_filesystem/templates/blockstore_config_filesystem/jobs/init/: cms.sh
plugins/tutor-contrib-blockstore-minio/: MANIFEST.in  Makefile  README.rst  setup.py
plugins/tutor-contrib-blockstore-minio/blockstore_config_minio/: plugin.py
plugins/tutor-contrib-blockstore-minio/blockstore_config_minio/patches/: openedx-cms-common-settings
plugins/tutor-contrib-frontend-base/: README.rst  setup.py
plugins/tutor-contrib-frontend-base/tutor_frontend_base/: plugin.py
plugins/tutor-contrib-google-analytics/: README.rst  setup.py
plugins/tutor-contrib-google-analytics/tutor_google_analytics/: plugin.py
plugins/tutor-contrib-learner-dashboard-mfe/: MANIFEST.in  Makefile  README.rst  setup.py
plugins/tutor-contrib-learner-dashboard-mfe/tutor_learner_dashboard_mfe/: plugin.py
plugins/tutor-contrib-learner-dashboard-mfe/tutor_learner_dashboard_mfe/patches/: openedx-lms-common-settings  openedx-lms-development-settings  openedx-lms-production-settings
plugins/tutor-contrib-learner-dashboard-mfe/tutor_learner_dashboard_mfe/templates/learner-dashboard-mfe/jobs/init/: lms.sh
plugins/tutor-contrib-library-authoring-mfe/: README.rst  setup.py
plugins/tutor-contrib-library-authoring-mfe/tutor_library_authoring_mfe/: plugin.py
plugins/tutor-contrib-library-authoring-mfe/tutor_library_authoring_mfe/patches/: mfe-webpack-dev-config  openedx-cms-development-settings  openedx-cms-production-settings  openedx-lms-common-settings
plugins/tutor-contrib-library-authoring-mfe/tutor_library_authoring_mfe/templates/library_authoring_mfe/jobs/init/: cms.sh
plugins/tutor-contrib-ltistore/: MANIFEST.in  Makefile  README.rst  pyproject.toml
plugins/tutor-contrib-ltistore/tutor_ltistore/: plugin.py
plugins/tutor-contrib-ltistore/tutor_ltistore/patches/: openedx-cms-common-settings  openedx-common-settings  openedx-dockerfile-post-python-requirements
plugins/tutor-contrib-ltistore/tutor_ltistore/templates/ltistore/tasks/lms/: enable_lti_store.sh
plugins/tutor-contrib-paragon/: .hatch_build.py  MANIFEST.in  Makefile  README.rst  pyproject.toml
plugins/tutor-contrib-paragon/tests/: check_version_test.py
plugins/tutor-contrib-paragon/tests/integration/: conftest.py  helpers.py  plugin_functionality_test.py  plugin_setup_test.py
plugins/tutor-contrib-paragon/tutorparagon/: commands.py  plugin.py
plugins/tutor-contrib-paragon/tutorparagon/patches/: caddyfile-lms  k8s-deployments  k8s-services  kustomization-configmapgenerator  local-docker-compose-jobs-services  local-docker-compose-services  mfe-caddyfile  mfe-k8s-volume-mounts  mfe-k8s-volumes  mfe-volumes  openedx-lms-development-settings  openedx-lms-production-settings
plugins/tutor-contrib-paragon/tutorparagon/templates/paragon/settings/: mfe-common-settings  mfe-config-lms-common-setting
plugins/tutor-contrib-portainer/: MANIFEST.in  README.rst  setup.py
plugins/tutor-contrib-portainer/tutor_portainer/: plugin.py
plugins/tutor-contrib-portainer/tutor_portainer/patches/: caddyfile  local-docker-compose-caddy-aliases  local-docker-compose-services
plugins/tutor-contrib-scout-apm/: MANIFEST.in  README.rst  setup.py
plugins/tutor-contrib-scout-apm/tutor_scout_apm/: plugin.py
plugins/tutor-contrib-scout-apm/tutor_scout_apm/patches/: openedx-cms-common-settings  openedx-dockerfile-post-python-requirements  openedx-lms-common-settings
plugins/tutor-contrib-test-legacy-js/: MANIFEST.in  Makefile  README.rst  setup.py
plugins/tutor-contrib-test-legacy-js/tutor_test_legacy_js/: plugin.py
plugins/tutor-contrib-test-legacy-js/tutor_test_legacy_js/patches/: openedx-dev-dockerfile-post-python-requirements
